--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,3 @@
+<h1>PGP Authentication App</h1>
+<p>Secure, password-free authentication using PGP keys.</p>
 <a href="/register">Register / Log in with PGP</a>
