--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,7 @@
-<h1>PGP Authentication App</h1>
-<p>Secure, password-free authentication using PGP keys.</p>
-<a href="/register">Register / Log in with PGP</a>
+<div class="lock-icon">🔐</div>
+<h1>PGP Auth</h1>
+<p>Secure two-factor authentication using cryptographic keys</p>
+<div class="btn-group">
+  <a href="/login" class="btn">Login</a>
+  <a href="/register" class="btn btn-secondary">Register</a>
+</div>
