--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,5 @@
-<h2>Login</h2>
-<p class="subtitle">Enter your credentials</p>
+<h2>Sign In</h2>
+<p class="subtitle">Enter your username</p>
 <% if flash['error'] %>
   <div class="error"><%= flash['error'] %></div>
 <% end %>
@@ -7,8 +7,7 @@
   <form method="post">
     <%= csrf_tag %>
     <input type="text" name="username" placeholder="Username" required autocomplete="username">
-    <input type="password" name="password" placeholder="Password" required autocomplete="current-password">
-    <button type="submit" class="btn">Login</button>
+    <button type="submit" class="btn">Continue</button>
   </form>
   <div class="register-link">
     Don't have an account? <a href="/register">Register</a>
