--- a/views/login_password.erb
+++ b/views/login_password.erb
@@ -5,7 +5,7 @@
 <% end %>
 <div class="form-container">
   <form method="post">
-    <%= csrf_tag if defined?(csrf_tag) %>
+    <%= csrf_tag %>
     <input type="password" name="password" placeholder="Password" required autocomplete="current-password">
     <button type="submit" class="btn">Continue to 2FA</button>
   </form>
