--- a/views/verify_pgp.erb
+++ b/views/verify_pgp.erb
@@ -28,7 +28,7 @@
 <div class="form-container">
   <div class="instructions">Enter the decrypted verification code:</div>
   <form method="post">
-    <%= csrf_tag if defined?(csrf_tag) %>
+    <%= csrf_tag %>
     <input type="text" name="code" placeholder="Enter decrypted code" required autocomplete="off">
     <br>
     <button type="submit" class="btn">Verify & Complete Registration</button>
